# agent-security-scanner

./: .agent-scan.yml  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: LAUNCH.md  RELEASE_CHECKLIST.md  RULES.md  RULES_zh.md
examples/: .agent-scan.yml  pre-commit-config.yaml  unsafe-actions.yml  unsafe-mcp-config.json  unsafe-script.sh
examples/github-actions/: agent-security-scan.yml
examples/sample-project/: .npmrc  AGENTS.md  Dockerfile  SKILL.md  app.py  binding.gyp  mcp.json  package.json  requirements.txt  setup.py
examples/sample-project/.claude/: memory.md  settings.json
examples/sample-project/.devcontainer/: devcontainer.json
examples/sample-project/.github/workflows/: ci.yml
examples/unsafe-ai-tool-configs/.claude/: settings.json
examples/unsafe-ai-tool-configs/.codex/: config.toml
examples/unsafe-ai-tool-configs/.continue/: config.yaml
examples/unsafe-ai-tool-configs/.cursor/: settings.json
src/agent_security_scanner/: __init__.py  autofix.py  baseline.py  cli.py  commands.py  config.py  i18n.py  interactive.py  interactive_input.py  models.py  output.py  quality.py  remediation.py  reports.py  rules_catalog.py  rules_docs.py  scanner.py  terminal.py
src/agent_security_scanner/rules/: __init__.py  ai_tools.py  base.py  filesystem.py  github_actions.py  mcp.py  secrets.py  shell.py  supply_chain.py
src/agent_security_scanner/utils/: __init__.py  files.py  text.py
tests/: test_ai_tool_rules.py  test_autofix.py  test_baseline.py  test_cli.py  test_config.py  test_examples.py  test_filesystem_rules.py  test_github_actions_rules.py  test_i18n.py  test_mcp_rules.py  test_quality.py  test_remediation.py  test_reports.py  test_responsive_terminal.py  test_rules_docs.py  test_sarif_output.py  test_scanner.py  test_secrets_rules.py  test_shell_rules.py  test_supply_chain_rules.py
