[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsec-scanner"
version = "1.0.3"
description = "Local-first security scanner for AI Agent, MCP, and AI coding tool projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Agent Security Scanner Contributors" }
]
keywords = [
  "ai-agent",
  "mcp",
  "security",
  "scanner",
  "secrets",
  "github-actions"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "reportlab>=4.0",
  "rich>=13.0",
  "tomli>=2.0; python_version < '3.11'",
  "typer>=0.12",
  "wcwidth>=0.2"
]

[project.urls]
Homepage = "https://github.com/LeeBush22/agent-security-scanner"
Repository = "https://github.com/LeeBush22/agent-security-scanner"
Issues = "https://github.com/LeeBush22/agent-security-scanner/issues"
Documentation = "https://github.com/LeeBush22/agent-security-scanner#readme"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "coverage[toml]>=7.0",
  "mypy>=1.8",
  "nox>=2024.4",
  "pytest>=8.0"
]

[project.scripts]
agent-scan = "agent_security_scanner.cli:entrypoint"
agentsec = "agent_security_scanner.cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["agent_security_scanner"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
packages = ["agent_security_scanner"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent_security_scanner"]
